--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Whisper</string>
 
-    <string name="need_record_audio_permission">"L'autorisation ENREGISTREMENT AUDIO n'est pas accordée"</string>
+    <string name="need_record_audio_permission">"L\'autorisation ENREGISTREMENT AUDIO n\'est pas accordée"</string>
     <string name="error_download">Erreur de téléchargement</string>
     <string name="download_model">Téléchargement de Modèle</string>
     <string name="download_model_text">\nTélécharger les modèles Whisper à partir de Hugging Face (~350 MB)</string>
