--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -32,5 +32,5 @@
     <string name="simple_chinese">Sinogrammes simplifiés:</string>
     <string name="text_to_speech">Synthèse vocale:</string>
     <string name="tts_language_not_supported">SV: Langue non prise en charge</string>
-    <string name="tts_initialization_failed">SV: Échec de l\’initialisation</string>
+    <string name="tts_initialization_failed">SV: Échec de l\'initialisation</string>
 </resources>
